# guitar-dsp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ai/: AiModule.cpp  AnthropicClient.cpp  AnthropicClient.h  AppPreferences.cpp  AppPreferences.h  CancellationToken.h  ConversationBuffer.cpp  ConversationBuffer.h  ConversationEngine.cpp  ConversationEngine.h  IHttpTransport.h  ILlmClient.h  ITranscriber.h  JuceHttpTransport.cpp  JuceHttpTransport.h  KnowledgeDoc.cpp  KnowledgeDoc.h  OllamaClient.cpp  OllamaClient.h  PersonaRegistry.cpp  PersonaRegistry.h  WhisperTranscriber.cpp  WhisperTranscriber.h
src/app/: AiSettingsPanel.cpp  AiSettingsPanel.h  AssetLocator.cpp  AssetLocator.h  CMakeLists.txt  ConversationPanel.cpp  ConversationPanel.h  DiagToggleBar.cpp  DiagToggleBar.h  DiagnosticPanel.cpp  DiagnosticPanel.h  MicScopeView.cpp  MicScopeView.h  MidiDevicePicker.cpp  MidiDevicePicker.h  NoteReadout.cpp  NoteReadout.h  Oscilloscope.cpp  Oscilloscope.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h  RavePanel.cpp  RavePanel.h  SayPanel.cpp  SayPanel.h  SceneIndicator.cpp  SceneIndicator.h  SongStore.cpp  SongStore.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  StatePill.cpp  StatePill.h  SungDirectPanel.cpp  SungDirectPanel.h  TtsStatusBar.cpp  (+13 more)
src/audio/: .placeholder.cpp  AppleTTSSource.h  AppleTTSSource.mm  AudioFileDecoder.cpp  AudioFileDecoder.h  AudioGraph.cpp  AudioGraph.h  BranchLimiter.h  Carousel.cpp  Carousel.h  CarouselMod.cpp  CarouselMod.h  ChannelVocoder.cpp  ChannelVocoder.h  ClipBankPlayer.cpp  ClipBankPlayer.h  Comb.cpp  Comb.h  Crusher.cpp  Crusher.h  Formant.cpp  Formant.h  FormantModulator.cpp  FormantModulator.h  FormantShifter.cpp  FormantShifter.h  GrainAnalyser.cpp  GrainAnalyser.h  GspeakBundle.cpp  GspeakBundle.h  Harmonizer.cpp  Harmonizer.h  IMicCapture.h  ITTSSource.h  IVocoder.h  InputStage.cpp  InputStage.h  Limiter.cpp  Limiter.h  LockFreeSPSCRing.h  (+52 more)
src/midi/: FCB1010Mapping.cpp  FCB1010Mapping.h  HostMidiSceneRouter.cpp  HostMidiSceneRouter.h  MidiRouter.cpp  MidiRouter.h  SceneCommand.h
src/ml/: CMakeLists.txt  RaveInference.cpp  RaveInference.h
src/scenes/: Scene.h  SceneEngine.cpp  SceneEngine.h  SceneLibrary.cpp  SceneLibrary.h
src/util/: PluginLogger.cpp  PluginLogger.h
tests/: CMakeLists.txt
tests/fixtures/: build_rave_stub_model.py  build_sung_vowels_test_bundle.py
tests/fixtures/ai/: anthropic_response_200.json  anthropic_response_401.json  ollama_chat_response_200.json  ollama_tags_response.json
tests/fixtures/scenes/: malformed.json  missing_required.json  valid_minimal.json  with_carousel.json  with_carousel_formant_lfo.json  with_carousel_pitch.json  with_clip_bank_scene.json  with_gspeak.json  with_tts.json  with_tts_clip_bank.json  with_tts_fallback.json  with_tts_no_word_sync.json  with_tts_text.json  with_tts_trigger.json  with_tts_word_sync.json
tests/golden/v1_speech/: clip_meta.json  onsets.txt  reference_output.f32
tests/harness/: GoldenFile.cpp  GoldenFile.h  RealtimeSentinel.cpp  RealtimeSentinel.h  SyntheticGuitar.cpp  SyntheticGuitar.h
tests/integration/: test_ai_pedal_routing.cpp  test_apple_speaking_scene.cpp  test_au_state_persist_ai.cpp  test_auto_vocal_formant_scene.cpp  test_carousel_scene.cpp  test_fallback_chain.cpp  test_gspeak_autoload.cpp  test_gspeak_save_then_load.cpp  test_headless_safety_ai.cpp  test_mic_talkbox_scene.cpp  test_mp3_import_flow.cpp  test_note_triggered_speech.cpp  test_passthrough_golden.cpp  test_rave_scene.cpp  test_rave_soak.cpp  test_realtime_safety.cpp  test_realtime_safety_ai.cpp  test_scene_hot_reload.cpp  test_scene_switch.cpp  test_sidechain_routing.cpp  test_speak_v2_scene.cpp  test_speaking_scene.cpp  test_sung_direct_scene.cpp  test_sung_vowels_scene.cpp  test_vocal_guitar_clip_bank_scene.cpp  test_voice_pack_swap.cpp  test_whisper_transcriber.cpp
tests/unit/: test_golden_file.cpp  test_onnx_runtime_links.cpp  test_realtime_sentinel.cpp  test_smoke.cpp  test_synthetic_guitar.cpp
tests/unit/ai/: FakeHttpTransport.h  FakeLlmClient.h  FakeMicCapture.h  FakeTranscriber.h  test_anthropic_client.cpp  test_app_preferences.cpp  test_cancellation_token.cpp  test_conversation_buffer.cpp  test_conversation_engine.cpp  test_juce_http_transport.cpp  test_knowledge_doc.cpp  test_ollama_client.cpp  test_persona_registry.cpp
tests/unit/app/: test_ai_settings_panel.cpp  test_asset_locator.cpp  test_conversation_panel.cpp  test_plugin_state.cpp  test_rave_panel.cpp  test_song_store.cpp  test_state_pill.cpp  test_word_readout.cpp
tests/unit/audio/: test_apple_tts_source.cpp  test_audio_file_decoder.cpp  test_audio_graph.cpp  test_branch_limiter.cpp  test_carousel.cpp  test_carousel_mod.cpp  test_channel_vocoder.cpp  test_clip_bank_player.cpp  test_comb.cpp  test_crusher.cpp  test_formant.cpp  test_formant_modulator.cpp  test_formant_shifter.cpp  test_gspeak_bundle.cpp  test_harmonizer.cpp  test_input_stage.cpp  test_ivocoder_compiles.cpp  test_lock_free_spsc_ring.cpp  test_mic_capture.cpp  test_mic_scope_buffer.cpp  test_mic_shaper.cpp  test_mixer.cpp  test_nan_inf_guard.cpp  test_note_stepped_player.cpp  test_onset_detector.cpp  test_phoneme_aligned_clip_builder.cpp  test_phoneme_compiles.cpp  test_phoneme_extractor.cpp  test_phoneme_stepped_player.cpp  test_piper_tts_source.cpp  test_pitch_shifter.cpp  test_pitch_tracked_carrier.cpp  test_prebaked_tts_source.cpp  test_rave_front_end.cpp  test_rave_front_end_drive.cpp  test_rave_front_end_eq.cpp  test_rave_front_end_gate.cpp  test_rave_synthesizer.cpp  test_sung_direct_path.cpp  test_syllabifier.cpp  (+7 more)
tests/unit/midi/: test_fcb1010_mapping.cpp  test_fcb1010_mapping_ai.cpp  test_host_midi_scene_router.cpp  test_midi_router_selection.cpp
tests/unit/ml/: test_rave_inference.cpp
tests/unit/scenes/: test_scene_compiles.cpp  test_scene_engine.cpp  test_scene_engine_carousel.cpp  test_scene_library.cpp  test_scene_library_carousel.cpp  test_scene_library_carousel_formant.cpp  test_scene_library_carousel_pitch.cpp  (+11 more)
(+135 files in other folders)
