add_executable(guitar_dsp_tests
    unit/test_smoke.cpp
    unit/test_realtime_sentinel.cpp
    unit/test_synthetic_guitar.cpp
    unit/test_golden_file.cpp
    unit/audio/test_input_stage.cpp
    unit/audio/test_mixer.cpp
    unit/audio/test_audio_graph.cpp
    unit/audio/test_ivocoder_compiles.cpp
    unit/audio/test_channel_vocoder.cpp
    unit/audio/test_tts_clip_player.cpp
    unit/audio/test_prebaked_tts_source.cpp
    unit/audio/test_apple_tts_source.cpp
    unit/audio/test_piper_tts_source.cpp
    unit/audio/test_tts_prewarmer.cpp
    unit/audio/test_word_segment.cpp
    unit/audio/test_crusher.cpp
    unit/audio/test_carousel_mod.cpp
    unit/audio/test_carousel.cpp
    unit/audio/test_pitch_shifter.cpp
    unit/audio/test_harmonizer.cpp
    unit/audio/test_comb.cpp
    unit/audio/test_formant.cpp
    unit/audio/test_onset_detector.cpp
    unit/audio/test_word_aligner.cpp
    unit/audio/test_note_stepped_player.cpp
    unit/scenes/test_scene_compiles.cpp
    unit/scenes/test_scene_library.cpp
    unit/scenes/test_scene_library_tts.cpp
    unit/scenes/test_scene_library_tts_text.cpp
    unit/scenes/test_scene_library_tts_fallback.cpp
    unit/scenes/test_scene_library_carousel.cpp
    unit/scenes/test_scene_library_carousel_pitch.cpp
    unit/scenes/test_scene_engine.cpp
    unit/scenes/test_scene_engine_carousel.cpp
    unit/midi/test_fcb1010_mapping.cpp
    integration/test_passthrough_golden.cpp
    integration/test_realtime_safety.cpp
    integration/test_scene_switch.cpp
    integration/test_speaking_scene.cpp
    integration/test_apple_speaking_scene.cpp
    integration/test_scene_hot_reload.cpp
    integration/test_fallback_chain.cpp
    integration/test_carousel_scene.cpp
    harness/RealtimeSentinel.cpp
    harness/SyntheticGuitar.cpp
    harness/GoldenFile.cpp
)

target_link_libraries(guitar_dsp_tests PRIVATE
    guitar_dsp_audio
    guitar_dsp_scenes
    guitar_dsp_midi
    juce::juce_audio_formats
    Catch2::Catch2WithMain
)

target_include_directories(guitar_dsp_tests PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
)

include(${CMAKE_SOURCE_DIR}/external/Catch2/extras/Catch.cmake)
catch_discover_tests(guitar_dsp_tests)
